[project]
name = "pawndex_mcp_server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for PawnDex, the Pawn package index for the SA-MP / open.mp ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["mcp", "pawn", "sa-mp", "open.mp", "package-manager", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=0.4.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.35.0",
    "uvicorn>=0.27.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[[project.authors]]
name = "Rafael D. Silva"

[[project.maintainers]]
name = "Rafael Dantas Silva"
email = "contato.rafaeldantas@proton.me"

[project.urls]
Homepage = "https://packages.open.mp/"
Repository = "https://github.com/sittiev/pawndex_mcp_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pawndex_mcp_server = "pawndex_mcp_server:main"
